Implemented markers on maps

--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Apartments</h1>
 
+<%= tag.div nil, id: 'map', data: {apartments: @apartments.to_json(methods:[:address])} %>
+
 <table>
   <thead>
     <tr>
