Added pagination to the index apartments view with kaminari. The map also filter using the pagination

--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -4,6 +4,8 @@
 
 <%= tag.div nil, id: 'map', data: {apartments: @apartments.to_json(methods:[:address])} %>
 
+<%= paginate @apartments %>
+
 <table>
   <thead>
     <tr>
