--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag "//maps.google.com/maps/api/js?sensor=true", 'application', 'data-turbolinks-track': 'reload' %>
-
+    <%= javascript_include_tag "//maps.google.com/maps/api/js?key=#{Rails.application.credentials.maps_api_key}", 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
