Added ability to move the map and redo a search in order to display more results. sw_lat, sw_lng, ne_lag, ne_lng has been used with Geocoder::Calculations.

--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -2,9 +2,14 @@
 
 <h1>Apartments</h1>
 
-
+<%= form_with(url: apartments_path, local: true, method: :get) do |f| %>
+  <%= f.text_field :near %>
+  <%= f.submit "Search" %>
+<% end %>
 
 <%= tag.div nil, id: 'map', data: {apartments: @apartments.to_json(methods:[:address])} %>
+
+<%= link_to "Redo search in this area", "#", id: "redo-search" %>
 
 <%= paginate @apartments %>
 
