--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -1,58 +1,72 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <p id="notice"><%= notice %></p>
 
-<h1>Apartments</h1>
+  <h1>Apartments</h1>
 
-<%= form_with(url: apartments_path, local: true, method: :get) do |f| %>
-  <%= f.text_field :near %>
-  <%= f.submit "Search" %>
-<% end %>
+  <%= form_with(url: apartments_path, local: true, method: :get) do |f| %>
+    <%= f.text_field :near %>
+    <%= f.submit "Search", class: 'waves-effect waves-light btn-small' %>
+  <% end %>
 
-<%= tag.div nil, id: 'map', data: {apartments: @apartments.to_json(methods:[:address]), l: params[:l]} %>
+  <div class="row">
+    <div class="col-md-7">
+      <table>
+        <thead>
+          <tr>
+            <th>Street</th>
+            <th>City</th>
+            <th>Zip</th>
+            <th>State</th>
+            <th>Beds</th>
+            <th>Baths</th>
+            <th>Sq  ft</th>
+            <th>Sale date</th>
+            <th>Price</th>
 
-<%= link_to "Redo search in this area", "#", id: "redo-search" %>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<%= paginate @apartments %>
+        <tbody>
+          <% @apartments.each do |apartment| %>
+            <tr>
+              <td><%= apartment.street %></td>
+              <td><%= apartment.city %></td>
+              <td><%= apartment.zip %></td>
+              <td><%= apartment.state %></td>
+              <td><%= apartment.beds %></td>
+              <td><%= apartment.baths %></td>
+              <td><%= apartment.sq__ft %></td>
+              <td><%= apartment.sale_date %></td>
+              <td><%= apartment.price %></td>
+              <td><% apartment.latitude %></td>
+              <td><% apartment.longitude %></td>
+              <td><% link_to 'Show', apartment %></td>
+              <td><% link_to 'Edit', edit_apartment_path(apartment) %></td>
+              <td><% link_to 'Destroy', apartment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= paginate @apartments %>
+    </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Street</th>
-      <th>City</th>
-      <th>Zip</th>
-      <th>State</th>
-      <th>Beds</th>
-      <th>Baths</th>
-      <th>Sq  ft</th>
-      <th>Sale date</th>
-      <th>Price</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="col-md-5">
+      <%= tag.div nil, id: 'map', data: {apartments: @apartments.to_json(methods:[:address]), l: params[:l]} %>
+      <%= link_to "Redo search in this area", "#", id: "redo-search" %>
+    </div>
+  </div>
 
-  <tbody>
-    <% @apartments.each do |apartment| %>
-      <tr>
-        <td><%= apartment.street %></td>
-        <td><%= apartment.city %></td>
-        <td><%= apartment.zip %></td>
-        <td><%= apartment.state %></td>
-        <td><%= apartment.beds %></td>
-        <td><%= apartment.baths %></td>
-        <td><%= apartment.sq__ft %></td>
-        <td><%= apartment.sale_date %></td>
-        <td><%= apartment.price %></td>
-        <td><%= apartment.latitude %></td>
-        <td><%= apartment.longitude %></td>
-        <td><%= link_to 'Show', apartment %></td>
-        <td><%= link_to 'Edit', edit_apartment_path(apartment) %></td>
-        <td><%= link_to 'Destroy', apartment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
 
-<%= link_to 'New Apartment', new_apartment_path %>
+
+
+
+
+
+
+  <br>
+
+  <%= link_to 'New Apartment', new_apartment_path %>
+
+</div>
